--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-  --clr-grey: 219, 15%, 55%;
-  --clr-blue: 216, 95%, 58%;
-  --clr-shade-blue: 216, 100%, 61%;
-  --clr-dark-navy: 217, 44%, 22%;
+  --clr-white: 0, 0%, 100%;
+  --clr-cyan: 178, 100%, 50%;
+  --clr-soft-blue: 215, 51%, 70%;
+  --very-dark-blue-line: 216, 32%, 27%;
   --font-family-outfit: "Outfit", sans-serif;
 }
 
@@ -78,8 +78,7 @@ picture {
 }
 .container .content .title {
   width: 302px;
-  color: var(--White, #FFF);
-  font-feature-settings: "clig" off, "liga" off;
+  color: hsl(var(--clr-white));
   /* Heading */
   font-family: Outfit;
   font-size: 22px;
@@ -89,8 +88,7 @@ picture {
 }
 .container .content .description {
   width: 302px;
-  color: var(--Soft-Blue, #8BACD9);
-  font-feature-settings: "clig" off, "liga" off;
+  color: hsl(var(--clr-soft-blue));
   /* Body */
   font-family: Outfit;
   font-size: 18px;
@@ -104,8 +102,7 @@ picture {
   align-items: center;
 }
 .container .content .info .value {
-  color: var(--Cyan, #00FFF8);
-  font-feature-settings: "clig" off, "liga" off;
+  color: hsl(var(--clr-cyan));
   /* Caption (Bold) */
   font-family: Outfit;
   font-size: 16px;
@@ -120,8 +117,7 @@ picture {
   height: 18px;
 }
 .container .content .info .timeleft {
-  color: var(--Soft-Blue, #8BACD9);
-  font-feature-settings: "clig" off, "liga" off;
+  color: hsl(var(--clr-soft-blue));
   /* Caption */
   font-family: Outfit;
   font-size: 16px;
@@ -138,7 +134,7 @@ picture {
 .container .content .horizontalline {
   width: 302px;
   height: 1px;
-  background: var(--very-dark-blue-line, #2E405A);
+  background: hsl(var(--very-dark-blue-line));
 }
 .container .content .author {
   display: flex;
@@ -149,12 +145,10 @@ picture {
   width: 33px;
   height: 33px;
   border-radius: 33px;
-  border: 1px solid var(--White, #FFF);
-  background: url(<path-to-image>), lightgray 50%/cover no-repeat;
+  border: 1px solid hsl(var(--clr-white));
 }
 .container .content .author p {
-  color: var(--White, #FFF);
-  font-feature-settings: "clig" off, "liga" off;
+  color: hsl(var(--clr-white));
   /* Caption */
   font-family: Outfit;
   font-size: 16px;
@@ -163,8 +157,7 @@ picture {
   line-height: normal;
 }
 .container .content .author p span {
-  color: var(--Soft-Blue, #8BACD9);
-  font-feature-settings: "clig" off, "liga" off;
+  color: hsl(var(--clr-soft-blue));
   /* Caption */
   font-family: Outfit;
   font-size: 16px;
